--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ elasticsearch-dsl = "<8.0.0,>=7.0.0"
 sh = "==1.12.13"
 pycountry = "==18.12.8"
 deb-pkg-tools = "==5.2"
+nose = "==1.3.7"
 
 [dev-packages]
 bumpversion = "*"
