--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ sh = "==1.12.13"
 pycountry = "==18.12.8"
 deb-pkg-tools = "==5.2"
 nose = "==1.3.7"
+coloredlogs = "*"
 
 [dev-packages]
 bumpversion = "*"
