--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ deb-pkg-tools = "==5.2"
 nose = "==1.3.7"
 coloredlogs = "*"
 urllib3 = "==1.25.10"
+tqdm = "*"
 
 [dev-packages]
 bumpversion = "*"
