--- a/Pipfile
+++ b/Pipfile
@@ -4,15 +4,15 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-click = "==7.0"
-elasticsearch = "<8.0.0,>=6.0.0"
-elasticsearch-dsl = "<8.0.0,>=6.0.0"
-sh = "==1.12.13"
-pycountry = "==18.12.8"
-deb-pkg-tools = "==5.2"
+click = "==8.1"
+elasticsearch = ">=7.17.0,<8.0.0"
+elasticsearch-dsl = ">=7.4.0,<8.0.0"
+sh = "==1.14.2"
+pycountry = "==22.3.5"
+deb-pkg-tools = "==8.4"
 nose = "==1.3.7"
 coloredlogs = "*"
-urllib3 = "==1.25.10"
+urllib3 = "==1.26.9"
 tqdm = "*"
 
 [dev-packages]
