--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,7 @@ name = "pypi"
 
 [packages]
 click = "==8.1"
-elasticsearch = ">=7.17.0,<8.0.0"
+elasticsearch = ">=7.10,<7.11"
 elasticsearch-dsl = ">=7.4.0,<8.0.0"
 sh = "==1.14.2"
 pycountry = "==22.3.5"
@@ -13,7 +13,7 @@ deb-pkg-tools = "==8.4"
 nose = "==1.3.7"
 coloredlogs = "*"
 urllib3 = "==1.26.9"
-tqdm = "*"
+tqdm = "==4.54.1"
 
 [dev-packages]
 bumpversion = "*"
