--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ nose = "==1.3.7"
 coloredlogs = "*"
 urllib3 = "==1.26.9"
 tqdm = "==4.54.1"
+argostranslate = "*"
 
 [dev-packages]
 bumpversion = "*"
