--- a/Pipfile
+++ b/Pipfile
@@ -14,7 +14,7 @@ nose = "==1.3.7"
 coloredlogs = "*"
 urllib3 = "==1.26.9"
 tqdm = "==4.54.1"
-argostranslate = "*"
+argostranslate = "==1"
 
 [dev-packages]
 bumpversion = "*"
