--- a/Pipfile
+++ b/Pipfile
@@ -13,8 +13,8 @@ deb-pkg-tools = "==8.4"
 nose = "==1.3.7"
 coloredlogs = "*"
 urllib3 = "==1.26.9"
-tqdm = "==4.54.1"
 argostranslate = "==1.6.1"
+rich = "==12.4.1"
 
 [dev-packages]
 bumpversion = "*"
