--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,15 +20,22 @@ jobs:
           name: Install Apertium
           command: |
             sudo apt install -f -qq -y apertium-all-dev dpkg-dev fakeroot lintian
+      - restore_cache:
+          name: Restore virtualenvs from previous builds
+          key: virtualenvs-dependencies-cache-{{ .Branch }}-{{ checksum "poetry.lock" }}
       - run:
-          name: Install Pipenv
+          name: Install Poetry and project's pip packages
           command: |
-            (sudo apt update || /bin/true) && sudo apt install pipenv
-      - run:
-          name: Install dependencies
-          command: |
+            export TERM=xterm-256color
+            export COLUMNS=150
+            curl -sSL https://install.python-poetry.org | python3 -
             make install
+      - save_cache:
+          name: Save virtualenvs cache for future builds
+          key: virtualenvs-dependencies-cache-{{ .Branch }}-{{ checksum "poetry.lock" }}
+          paths:
+            - ~/.cache/pypoetry/virtualenvs
       - run:
           name: Run tests
           command: |
-            pipenv run nosetests --logging-level=WARNING
+            poetry run nosetests --logging-level=WARNING
