refactor: migrate from nose to pytest

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,4 +38,4 @@ jobs:
       - run:
           name: Run tests
           command: |
-            poetry run nosetests --logging-level=WARNING
+            make test
