--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,13 +21,10 @@ urllib3 = "==1.26.9"
 argostranslate = "==1.7.0"
 rich = "==12.4.1"
 
-[tool.poetry.dev-dependencies]
-bumpversion = "*"
-nose = "*"
-nose-watch = "*"
+[tool.poetry.group.dev.dependencies]
 pyyaml = "*"
 argh = "*"
-twine = "*"
+pytest = "^7.2.0"
 
 [build-system]
 requires = ["poetry-core"]
