--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,22 +9,22 @@ packages = [{include = "es_translator"}]
 
 [tool.poetry.dependencies]
 python = "^3.8,<3.11"
-click = "==8.1"
+click = "^8"
 elasticsearch = ">=7.10,<7.11"
 elasticsearch-dsl = ">=7.4.0,<8.0.0"
-sh = "==1.14.2"
-pycountry = "==22.3.5"
-deb-pkg-tools = "==8.4"
+sh = "^1"
+pycountry = "^22.3"
+deb-pkg-tools = "^8.4"
 nose = "==1.3.7"
 coloredlogs = "*"
-urllib3 = "==1.26.9"
-argostranslate = "==1.7.0"
-rich = "==12.4.1"
+urllib3 = "^1.26"
+argostranslate = "^1.7"
+rich = "^12"
 
 [tool.poetry.group.dev.dependencies]
 pyyaml = "*"
 argh = "*"
-pytest = "^7.2.0"
+pytest = "^7.2"
 
 [build-system]
 requires = ["poetry-core"]
