--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ coloredlogs = "*"
 urllib3 = "^1.26"
 argostranslate = "^1.7"
 rich = "^12"
+torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.13.1%2Bcpu-cp310-cp310-linux_x86_64.whl"}
 
 [tool.poetry.group.dev.dependencies]
 pyyaml = "*"
