--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,11 +19,7 @@ coloredlogs = "*"
 urllib3 = "^1.26"
 argostranslate = "^1.7"
 rich = "^12"
-torch = [
-  {markers = "sys_platform == 'linux' and platform_machine == 'x86_64'", version = "1.13.1"},
-  {markers = "sys_platform == 'linux' and platform_machine == 'aarch64'", url = "https://download.pytorch.org/whl/torch-1.13.1-cp310-cp310-manylinux2014_aarch64.whl"},
-  {markers = "sys_platform == 'darwin' and platform_machine == 'amd64'", url = "https://download.pytorch.org/whl/cpu/torch-1.13.1-cp310-none-macosx_11_0_arm64.whl"}
-]
+torch = "^1.13"
 
 [tool.poetry.group.dev.dependencies]
 pyyaml = "*"
