--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,15 @@ filelock = "^3.12.2"
 pyyaml = "*"
 argh = "*"
 pytest = "^7.2"
+pytest-mock = "^3.11.1"
+mkdocs = "^1.4.3"
+mkdocs-material = "^9.1.16"
+mkdocstrings-python = "^1.1.2"
+mkdocstrings = "^0.22.0"
+mkdocs-exclude = "^1.0.2"
+mkdocs-minify-plugin = "^0.6.4"
+mkdocs-autolinks-plugin = "^0.7.0"
+cairosvg = "^2.7.0"
 
 [tool.pytest.ini_options]
 filterwarnings = [
