--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,9 @@ pycountry = "^22.3"
 deb-pkg-tools = "^8.4"
 coloredlogs = "*"
 urllib3 = "^1.26"
-argostranslate = "^1.9"
+argostranslate = {git = "https://github.com/pirhoo/argos-translate"}
 rich = "^12"
-torch = "^1.13"
+torch = "^2.2"
 celery = {extras = ["redis"], version = "^5.3.1"}
 filelock = "^3.12.2"
 
