--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "es-translator"
 version = "1.9.0"
-description = "A lazy yet bulletproof machine translation tool for Elastichsearch."
+description = "A lazy yet bulletproof machine translation tool for Elasticsearch."
 authors = ["ICIJ <engineering@icij.org>"]
 readme = "README.md"
 license = "GNU AFFERO GENERAL PUBLIC LICENSE"
@@ -12,15 +12,15 @@ python = "^3.8.2,<3.11"
 click = "^8"
 elasticsearch = ">=7.10,<7.18"
 elasticsearch-dsl = ">=7,<8.0.0"
-sh = "^1"
-pycountry = "^22.3"
+sh = "^2"
+pycountry = "^24.6"
 deb-pkg-tools = "^8.4"
 coloredlogs = "*"
 urllib3 = "^1.26"
-argostranslate = "^1.9.6"
-rich = "^12"
-celery = {extras = ["redis"], version = "^5.3.1"}
-filelock = "^3.12.2"
+argostranslate = "^1.10"
+rich = "^14"
+celery = {extras = ["redis"], version = "^5.5"}
+filelock = "^3.20"
 torch = ">=2.3,<2.4"
 
 [tool.poetry.group.dev.dependencies]
