--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ license = "GNU AFFERO GENERAL PUBLIC LICENSE"
 packages = [{include = "es_translator"}]
 
 [tool.poetry.dependencies]
-python = "^3.8.2,<3.13"
+python = "^3.9,<3.13"
 click = "^8"
 elasticsearch = ">=7.10,<7.18"
 elasticsearch-dsl = ">=7,<8.0.0"
@@ -22,6 +22,7 @@ rich = "^13"
 celery = {extras = ["redis"], version = "^5.3.1"}
 filelock = "^3.12.2"
 torch = ">=2.3,<2.4"
+numpy = ">=1.26.0"
 
 [tool.poetry.group.dev.dependencies]
 pyyaml = "*"
