--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,8 +61,6 @@ plugins:
       glob:
       - __pycache__/*
   - mkdocstrings:
-      watch:
-        - es_translator
       handlers:
         python:
           paths: [.]
@@ -85,8 +83,8 @@ markdown_extensions:
   - pymdownx.highlight
   - pymdownx.extra
   - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
   - pymdownx.tabbed:
       alternate_style: true
       
