style: fix linting issues across codebase
- Use contextlib.suppress instead of try/except/pass
- Fix import sorting in test files
- Convert lambda assignments to def functions
- Replace % formatting with f-strings
- Add trailing newlines
- Fix Yoda conditions
- Remove unused variables
- Add B017 ignore for test files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,7 +101,8 @@ ignore = [
 # Ignore unused imports in __init__.py files
 "__init__.py" = ["F401"]
 # Ignore import violations in test files
-"tests/**/*.py" = ["F401", "F811"]
+# B017: allow assertRaises(Exception) for testing generic exception handling
+"tests/**/*.py" = ["F401", "F811", "B017"]
 # Ignore redefinition of name property in abstract interpreter
 "es_translator/interpreters/abstract.py" = ["F811"]
 
