--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ celery = {extras = ["redis"], version = "^5.3.1"}
 filelock = "^3.12.2"
 torch = ">=2.3,<2.4"
 numpy = ">=1.26.0"
+plotext = "^5.3.2"
 
 [tool.poetry.group.dev.dependencies]
 pyyaml = "*"
@@ -127,3 +128,4 @@ build-backend = "poetry.core.masonry.api"
 es-translator = "es_translator.cli:translate"
 es-translator-tasks = "es_translator.cli:tasks"
 es-translator-pairs = "es_translator.cli:pairs"
+es-translator-monitor = "es_translator.cli:monitor"
